Remove setIP(). Use BearFramework's API for IP retrieval.

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": "7.1.*|7.2.*|7.3.*|7.4.*|8.0.*|8.1.*",
         "ext-openssl": "*",
-        "bearframework/bearframework": "1.*"
+        "bearframework/bearframework": "^1.11"
     },
     "require-dev": {
         "bearframework/addon-tests": "1.*"
